# Learning

./: .gitattributes  .gitignore  cleaned_income_dataset.csv  plan.txt  processed_income_data.csv  test.ipynb
C++/: 3_not.cpp  8_Q.cpp  main.cpp  main.ipynb
C++/10.1.1_Questions_(loop)/: 1_Loop_Q.cpp  2_Loop_Q.cpp  3_Loop_Q.cpp  4_Loop_Q.cpp  5_Loop_Q.cpp  6_Loop_Q.cpp
C++/10.1_Questions/: 10_switch.cpp  1_AreaOfCircle.cpp  2_rectangle.cpp  3_threeDigitCheck.cpp  4_triangle.cpp  5_greatest_num.cpp  6_divisiblity.cpp  8_student_grade.cpp  9_ternary.cpp
C++/10.2_Questions/: 1_composit.cpp  2_prime.cpp
C++/10.3_Questions_imp/: 3_Q.cpp  6_Q.cpp
C++/10_Questions/: 2_rectangle.cpp  5_greatest_num.cpp  6_divisiblity.cpp  7_nested.cpp  8_student_grade.cpp
C++/11_Pointers/: 1_adress.cpp  2_pointer.cpp  3_refrence.cpp  4_.cpp  5.cpp  6.cpp  7.cpp  8.cpp
C++/11_Questions/: 2_prime.cpp  3_continue.cpp  4_while.cpp
C++/12_Questions_imp/: 1_Q.cpp  2_Q.cpp  3_Q.cpp  4_Q.cpp  5_Q.cpp
C++/13_Arrays/: 1_.cpp  (+9 more)
C++_NN/: 1_forward_pass.cpp
C++_imageProcessing/: CMakeLists.txt  main_1.cpp
C++_imageProcessing/1_geometric_operations/: 1_Translation.cpp  2_scaling.cpp  3_rotation.cpp  4_flipping.cpp  5_shear.cpp
C++_imageProcessing/src/: main.cpp
C++_oops/: 1.cpp  2_constructer.cpp
GO_Lang/: go.mod
JavaScript/: package-lock.json  package.json  text.txt
ML_3DVision/: 1_Signals_Images_PCD.py  2.py  2_Features_extraction.py  3_Model_selection.py  requirements.txt
Python_DeepLearning/: 1_ANN.ipynb  YOLO.ipynb  main.ipynb  main_2.ipynb
Python_programming/: test.ipynb
(+726 files in other folders)
